search by tagline and headline

--- a/templates/core/partials/_footer.html
+++ b/templates/core/partials/_footer.html
@@ -1,8 +1,5 @@
 <section class="footer-container">
-    <div>
-        <p>Victoria Cia</p>
-    </div>
-    <div>
-        Thanks for visit!
-    </div>
+        <span>Victoria Cia</span>
+
+        <span>Thanks for visit!</span>
 </section>
