--- a/static/css/core/styles.css
+++ b/static/css/core/styles.css
@@ -15,9 +15,12 @@
 }
 
 
+
+
 main{
     margin: auto 5%;
     margin-top: 1%;
+    justify-content: center;
 }
 
 @media only screen and (max-width:600px){
@@ -52,8 +55,13 @@ main{
 .footer-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     background: rgb(31 41 55);
     color: #fff;
     padding: 1.5% 5%;
+}
+
+.footer-container p{
+    align-self: center;
 }
