--- a/templates/blog/posts_list.html
+++ b/templates/blog/posts_list.html
@@ -11,7 +11,7 @@
         {% for post in posts %}
         <div class="post-item">
             <div>
-                <a href="{% url 'Blog:posts_list' %}"><h1> {{post.headline}}</h1></a>
+                <a href="{% url 'Blog:entry_detail' post.id %}"><h1> {{post.headline}}</h1></a>
                 <p>{{post.body_text|striptags|truncatechars:200}}</p>
                 <a href="{% url 'Blog:entry_list' post.blog.id %}">{{post.blog.name}}</a>
             </div>
