--- a/templates/core/partials/_navbar.html
+++ b/templates/core/partials/_navbar.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark space-btw">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container-fluid container-md ">
       <a class="navbar-brand" href="{% url 'home' %}">Welcome</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -15,6 +15,11 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'blog:posts_list' %}">Posts</a>
           </li>
+            <form method="GET" action="{% url 'blog:search_results' %}"  class="d-flex">
+              {% csrf_token %}
+              <input name="q" id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-light btn-sm" type="submit">Search</button>
+            </form>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Options
