--- a/templates/registration/sign_up.html
+++ b/templates/registration/sign_up.html
@@ -6,15 +6,7 @@
 
 {% block content %}
 
-{% if messages %}  
-<ul>   
-    {% for message in messages %}  
-        <li>{{ message }}</li>  
-        {% endfor %}  
-</ul>   
-{% endif %}  
-
-<form method="POST">
+<form method="POST" class="form-container">
     {% csrf_token %}
     {{form|crispy}}
 <p>Have an account? Login <a href="{% url 'Blog:login' %}">Here</a>!</p>
